update fetching aggregate
