# internal/infrastructure/mysql/order_repository.go
@@ -2,8 +2,11 @@ package mysql
 
 import (
 	"context"
+	"database/sql"
+	"errors"
 
 	sq "github.com/Masterminds/squirrel"
+	"github.com/dubininme/go-clean-simple-monolith/internal/domain/aggregate"
 	"github.com/dubininme/go-clean-simple-monolith/internal/domain/entity"
 	"github.com/dubininme/go-clean-simple-monolith/internal/domain/repository"
 )
@@ -63,6 +66,90 @@ func (r *MysqlOrderRepository) FindById(ctx context.Context, id int32) (*entity.
 	}
 	order := toOrderEntity(dao)
 	return &order, nil
+}
+
+func (r *MysqlOrderRepository) FindOrderWithItemsById(ctx context.Context, id int32) (*aggregate.OrderWithItems, error) {
+	type joinedRow struct {
+		// order fields
+		OrderId     int32  `db:"order_id"`
+		Status      string `db:"status"`
+		Amount      int64  `db:"amount"`
+		Currency    string `db:"currency"`
+		CreatedAt   int64  `db:"created_at"`
+		UpdatedAt   int64  `db:"updated_at"`
+		CancelledAt *int64 `db:"cancelled_at"`
+		// item fields
+		ItemId        *int32 `db:"item_id"`
+		ProductId     *int32 `db:"product_id"`
+		Quantity      *int32 `db:"quantity"`
+		Price         *int64 `db:"price"`
+		ItemCreatedAt *int64 `db:"item_created_at"`
+		ItemUpdatedAt *int64 `db:"item_updated_at"`
+	}
+
+	query, args, err := sq.
+		Select(
+			"`order`.id AS order_id",
+			"`order`.status",
+			"`order`.amount",
+			"`order`.currency",
+			"`order`.created_at",
+			"`order`.updated_at",
+			"`order`.cancelled_at",
+			"`order_item`.id AS item_id",
+			"`order_item`.product_id",
+			"`order_item`.quantity",
+			"`order_item`.price",
+			"`order_item`.created_at AS item_created_at",
+			"`order_item`.updated_at AS item_updated_at",
+		).
+		From("`order`").
+		LeftJoin("`order_item` ON `order_item`.`order_id` = `order`.`id`").
+		Where(sq.Eq{"`order`.id": id}).
+		PlaceholderFormat(sq.Question).
+		ToSql()
+	if err != nil {
+		return nil, err
+	}
+
+	var rows []joinedRow
+	err = r.ext.SelectContext(ctx, &rows, query, args...)
+	if err != nil {
+		if errors.Is(err, sql.ErrNoRows) || len(rows) == 0 {
+			return nil, nil
+		}
+		return nil, err
+	}
+	order := entity.Order{
+		Id:          rows[0].OrderId,
+		Status:      rows[0].Status,
+		Amount:      rows[0].Amount,
+		Currency:    rows[0].Currency,
+		CreatedAt:   rows[0].CreatedAt,
+		UpdatedAt:   rows[0].UpdatedAt,
+		CancelledAt: rows[0].CancelledAt,
+	}
+	items := make([]entity.OrderItem, 0, len(rows))
+	for _, row := range rows {
+		if row.ItemId == nil {
+			continue // skip if order has no items
+		}
+
+		items = append(items, entity.OrderItem{
+			Id:        *row.ItemId,
+			OrderId:   rows[0].OrderId,
+			ProductId: *row.ProductId,
+			Quantity:  *row.Quantity,
+			Price:     *row.Price,
+			CreatedAt: *row.ItemCreatedAt,
+			UpdatedAt: *row.ItemUpdatedAt,
+		})
+	}
+
+	return &aggregate.OrderWithItems{
+		Order: order,
+		Items: items,
+	}, nil
 }
 
 func (r *MysqlOrderRepository) Save(ctx context.Context, order entity.Order) (int32, error) {
